Change creator name

--- a/Backlit/Resources/en.lproj/Localizable.strings
+++ b/Backlit/Resources/en.lproj/Localizable.strings
@@ -2,7 +2,7 @@
   Localizable.strings
   Backlit
 
-  Created by Stanislas Chevallier on 28/01/2017.
+  Created by syan on 28/01/2017.
   Copyright © 2017 Syan. All rights reserved.
 */
 
